<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- General Application Strings -->
    <string name="app_name">Trail Maps</string>
    
    <!-- BETA Access Strings (These will be required in final build) -->
    <string name="test_url">http://fernferret.com/mtmtest.xml</string>
    <string name="beta">true</string>
    
    <!-- BETA Strings (Will not be required in final build) -->
    <string name="beta_version">0.0.6</string>
    <string name="beta_check_url">http://fernferret.com/mtmbeta/?version=</string>
    <string name="register_device_url">http://www.fernferret.com/mtmbeta/checkDeviceId.php?device=</string>
    <string name="beta_user_content">First of all, on behalf of the MTM Team, we thank you for taking time to take a look at our application. Since this is the first time you\'ve opened this application, we simply ask you to enter your name so we can figure out who\'s Android phone is associated with who. You will only have to do this once! Once you fill in your name, press the Submit button!</string>
    <string name="beta_user_title">Welcome to the MTM BETA!</string>
    <string name="beta_user_sample_name">John Doe</string>
    <string name="beta_user_sample_network">Verizon, ATT, T-Mobile, etc.</string>
    <string name="beta_user_banned_title">ESN Error</string>
    <string name="beta_user_banned_content">Whoops... Looks like there\'s been an issue verifying the validity of your Android Device! To continue use of the BETA, please send fernferret@gmail.com an email including your IMEI and/or MEID number.  They can be found in Settings\>About Phone\>Phone Identity </string>
    <string name="beta_user_date_title">A new update has come out!</string>
    <string name="beta_user_date_content">Hey there! A new BETA version of the Mobile Trail Maps software has been released.  Due to the fact that we may or may not have broken something in your current version (and the fact that we\'ve fixed bunches of other things) as a BETA user it is required that you recieve this update to continue using the software.</string>
    <string name="beta_user_date_log">Changelog:</string>
    <string name="beta_user_test_log">Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  Testing the update log...  </string>
    <string name="beta_download_url">http://www.fernferret.com/mtmbeta/downloads/mtmBETA.</string>
    <string name="beta_user_update_title">Your download has started!</string>
    <string name="beta_user_update_content">Thanks for downloading the newest version of the Mobile Trail Maps beta! You should see the download starting above in your notifications bar! Simply drag that down, and click on the mtmBETA file to install the new version!</string>
    <string name="beta_user_log_url">http://www.fernferret.com/mtmbeta/downloads/latest.txt</string>
    <string name="beta_user_latest_version">http://www.fernferret.com/mtmbeta/currentVersion.txt</string>
    
    <!-- Menu Item Names -->
    <string name="menu_settings">Settings</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_center">Center</string>
    <string name="menu_disable_tracking">Disable Tracking</string>
    <string name="menu_enable_tracking">Enable Tracking</string>
    
    <!-- Common Button Actions -->
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="submit">Submit</string>
    <string name="enter">Enter</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
</resources>
