<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="fill"
			android:orientation="vertical"
			android:padding="10dip">
		  	<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textSize="15sp"
				android:textStyle="bold"
				android:text="@string/beta_user_banned_title"
				android:paddingBottom="5dip">
			</TextView>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/beta_user_banned_content"
				android:paddingBottom="5dip">
			</TextView>
			<Button android:id="@+id/beta_user_cancel"
					android:text="@string/close"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
			</Button>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
